# paytoy

./: .gitignore  Cargo.toml  README.md  run_suite.sh  run_t.sh
.github/workflows/: paytoy-linux.yml  paytoy-macos.yml
src/: balance.rs  clients.rs  ids.rs  main.rs  transaction.rs
test_suites/: generate_big_csv.py
test_suites/harness_error/error/: known_bad.csv
test_suites/harness_error/input/: known_bad.csv
test_suites/integration/error/: duplicate_tx.csv  too_many_dp.csv
test_suites/integration/input/: deposit_chargeback.csv  dispute_deposit.csv  dispute_withdrawal.csv  duplicate_tx.csv  short.csv  short_cols_reordered.csv  too_many_dp.csv  withdrawal_chargeback.csv
test_suites/integration/output/: deposit_chargeback.csv  dispute_deposit.csv  dispute_withdrawal.csv  withdrawal_chargeback.csv
